fix: make comment form responsive, fix content cut off on small screens (#278)
* fix content cut off in small screen

* make comment form responsive

* fix `improve-this-page` box cut off

* Update styling

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -80,3 +80,7 @@
   display: flex;
   flex-direction: column;
 }
+
+.width-full {
+  width: 100%;
+}
